# ai-chat-app

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  architecture.md  docker-compose.yml  main.py  pyproject.toml  server.py  test_env.py  test_pydantic.py  test_story.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 072ddc213ce5_move_pgvector_tables_to_rag_app_schema.py  2772c284687e_create_users_and_requests.py  6daf1504e07b_fix_embedding_dimension_to_384.py  9d57719b038b_.py  a1b2c3d4e5f6_enable_pgvector_extension.py  add_embedding_column_to_langchain_pg_embedding.py  b58e7594559c_sync_schema_after_pgvector_migration.py  e9656007d6d5_add_request_history_table.py  eba4b5a3506f_add_documents_table.py  ec29eee49eb2_moved_to_vector_db.py
app/: auth.py  config.py  database.py  logging_config.py  rate_limit.py  schemas.py
app/common/: uuid_mask.py
app/models/: __init__.py  document.py  request.py  user.py
app/routes/: auth_routes.py  document_routes.py  email_routes.py  query_routes.py  request_history_routes.py
app/services/: agent_service.py  docker_manager.py  document_service.py  email_service.py  file_storage_service.py  interfaces.py  rag_service.py  tool_utils.py
common/: celery_app.py
common/notifications/: QUEUE_QUICK_START.md  QUEUE_README.md  README.md  email_notification_sender.py  notification_sender.py  queued_email_notification_sender.py  tasks.py
common/workflows/: workflow.py
frontend/: vite.config.js
frontend/src/: App.css  App.jsx  index.css
mcp_server/: pyproject.toml  server.py
scripts/: example_send_email_queue.py  ingest.py  query_model.sh  start_frontend.sh  view_db.py
tests/: conftest.py  test_auth.py  test_document_routes.py  test_email_routes.py  test_file_storage.py  test_query.py  test_request_history.py
tests/data/: go.txt  tech_doc1.txt  tech_doc2.txt  tech_doc3.txt
(+18 files in other folders)
